This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: C implementation of asyncio.Future doesn't set value of StopIteration correctly
Type: behavior Stage: resolved
Components: asyncio Versions: Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: gvanrossum, methane, python-dev, yselivanov
Priority: normal Keywords:

Created on 2016-10-20 19:42 by yselivanov, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Messages (4)
msg279070 - (view) Author: Yury Selivanov (yselivanov) * (Python committer) Date: 2016-10-20 19:42
Specifically when the result of the Future is tuple.
msg279073 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-10-20 19:54
New changeset cfe2109ce2c0 by Yury Selivanov in branch '3.6':
Issue #28492: Fix how StopIteration is raised in _asyncio.Future
https://hg.python.org/cpython/rev/cfe2109ce2c0

New changeset 79b9257f3386 by Yury Selivanov in branch 'default':
Merge 3.6 (issue #28492)
https://hg.python.org/cpython/rev/79b9257f3386
msg279074 - (view) Author: Yury Selivanov (yselivanov) * (Python committer) Date: 2016-10-20 19:56
Inada-san, please take a look at my commit if you have time.
msg279103 - (view) Author: Inada Naoki (methane) * (Python committer) Date: 2016-10-21 03:22
Confirmed, thank you.
History
Date User Action Args
2022-04-11 14:58:38adminsetgithub: 72678
2016-10-21 14:59:49yselivanovsetstage: commit review -> resolved
2016-10-21 03:22:42methanesetmessages: + msg279103
2016-10-20 19:56:37yselivanovsetstatus: open -> closed
type: behavior
messages: + msg279074

resolution: fixed
stage: commit review
2016-10-20 19:54:59python-devsetnosy: + python-dev
messages: + msg279073
2016-10-20 19:42:44yselivanovcreate