Issue #28492: Fix how StopIteration is raised in _asyncio.Future